--- a/todo.org
+++ b/todo.org
@@ -4,7 +4,7 @@
 ** TODO C/C++
 *** DONE use clangd as lsp
 *** TODO investiate what will eglot will give me
-*** TODO formatting
+*** DONE formatting
 *** TODO use cmake lsp
 *** TODO compile cmake projects
 ** TODO Rust
@@ -13,11 +13,11 @@
 *** TODO cargo integration
 ** TODO Python
 *** TODO use pyright as lsp
-*** TODO formatting
-*** TODO REPL integration
+*** DONE formatting
+*** DONE REPL integration
 *** TODO execute script on the REPL
-** TODO Terminal
-*** TODO use powershell
+** DONE Terminal
+*** DONE use powershell on windows
 ** TODO Dotnet
 *** TODO investigate the possibilities
 * TODO Org-Mode
